--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Farm SUSHI with Uniswap LP Token" />
+    <meta name="description" content="Farm MISO with BTC" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -18,12 +18,12 @@
     <meta name="twitter:image" content="http://sushiswap.org/hero.png" />
     <meta
       name="twitter:description"
-      content="Farm SUSHI with Uniswap LP Token"
+      content="Farm MISO with BTC"
     />
     <meta name="twitter:card" content="summary" />
     <meta
       name="twitter:title"
-      content="SushiSwap - An Evolution over Uniswap with Yield Farming"
+      content="Miso - Revolutionizing Bitcoin with Yield Farming"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
